Updated to the latest dependency manager snapshot. Misc fixes for EE compatibility.
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@925672 13f79535-47bb-0310-9956-ffa450edef68